--- a/src/styles/components/projectList.css
+++ b/src/styles/components/projectList.css
@@ -1,6 +1,6 @@
 .projectListMain {
   width: 100%;
-  max-width: 622px; /* Max width for larger screens */
+  max-width: 622px;
   height: auto;
   display: flex;
   flex-direction: column;
@@ -8,24 +8,23 @@
 }
 
 /* Image Container */
-/* Image Container */
 .proListMainImg {
   width: 100%;
   height: 448px;
   border-radius: 24px;
   background-color: #171717;
   overflow: hidden;
-  position: relative; 
+  position: relative;
 }
 
 .proListMainImg img {
   width: 100%;
   height: 100%;
-  object-fit: cover; 
-  object-position: center; 
+  object-fit: cover;
+  object-position: center;
 }
-/* 
-Text Section */
+
+/* Text Section */
 .proListText {
   width: 100%;
   height: auto;
@@ -78,14 +77,14 @@ Text Section */
 }
 
 /* Responsive Styles */
-@media (max-width: 1059px) { 
+@media (max-width: 1059px) {
   .proListMainImg {
     width: 100%;
     height: 320px;
     border-radius: 24px;
     background-color: #171717;
     overflow: hidden;
-    position: relative; 
+    position: relative;
   }
 
   .proListTextSecond {
@@ -93,17 +92,13 @@ Text Section */
   }
 }
 @media (max-width: 1024px) {
-  .projectListMain {
-    /* max-width: 100%; */
-  }
-
   .proListMainImg {
     width: 100%;
     height: 320px;
     border-radius: 24px;
     background-color: #171717;
     overflow: hidden;
-    position: relative; 
+    position: relative;
   }
 
   .proListTextSecond {
@@ -122,7 +117,7 @@ Text Section */
     border-radius: 24px;
     background-color: #171717;
     overflow: hidden;
-    position: relative; 
+    position: relative;
   }
 
   .proListTextSecond {
