--- a/src/styles/components/servicesList.css
+++ b/src/styles/components/servicesList.css
@@ -17,8 +17,6 @@
   text-transform: uppercase;
 }
 .serviceListText2 {
-  /* width: 298.67px; */
-  /* height: 96px; */
   font-weight: 400;
   font-size: 1rem;
   line-height: 28px;
@@ -47,15 +45,13 @@
   .serviceListMain {
     height: 40vh;
   }
-  .serviceListText1{
+  .serviceListText1 {
     font-size: 2rem;
     line-height: 30px;
   }
   .serviceListText2 {
- 
     font-weight: 400;
-    font-size: .8rem;
+    font-size: 0.8rem;
     line-height: 20px;
   }
-  
 }
