--- a/src/styles/sections/section4.css
+++ b/src/styles/sections/section4.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 274px;
   background-color: black;
-  overflow: hidden; /* Prevent overflow */
+  overflow: hidden;
 }
 
 .container {
@@ -23,7 +23,7 @@
   position: absolute;
   width: 105%;
   height: 72px;
-  background-color: #4034eb; /* Default background for div1 */
+  background-color: #4034eb;
   top: 50%;
   left: 50%;
   transform-origin: center center;
@@ -78,20 +78,22 @@
     position: absolute;
     width: 105%;
     height: 50px;
-    background-color: #4034eb; /* Default background for div1 */
+    background-color: #4034eb;
     top: 50%;
     left: 50%;
     transform-origin: center center;
     transform: translate(-50%, -50%);
   }
-  .div1-small, .div2-small {
+  .div1-small,
+  .div2-small {
     width: 12px;
     height: 12px;
     background-color: white;
     transform: rotate(42.01deg);
   }
 
-  .div1 p, .div2 p {
+  .div1 p,
+  .div2 p {
     padding: 2vw;
     font-size: 1.2rem;
     color: white;
@@ -123,20 +125,22 @@
     position: absolute;
     width: 105%;
     height: 40px;
-    background-color: #4034eb; /* Default background for div1 */
+    background-color: #4034eb;
     top: 50%;
     left: 50%;
     transform-origin: center center;
     transform: translate(-50%, -50%);
   }
-  .div1-small, .div2-small {
+  .div1-small,
+  .div2-small {
     width: 10px;
     height: 10px;
     background-color: white;
     transform: rotate(42.01deg);
   }
 
-  .div1 p, .div2 p {
+  .div1 p,
+  .div2 p {
     padding: 2vw;
     font-size: 0.9rem;
     color: white;
@@ -154,7 +158,6 @@
   }
 }
 @media (max-width: 480px) {
-
   .section4main {
     height: 160px;
   }
@@ -174,14 +177,16 @@
     transform-origin: center center;
     transform: translate(-50%, -50%);
   }
-  .div1-small, .div2-small {
+  .div1-small,
+  .div2-small {
     width: 8px;
     height: 8px;
     background-color: white;
     transform: rotate(42.01deg);
   }
 
-  .div1 p, .div2 p {
+  .div1 p,
+  .div2 p {
     padding: 2vw;
     font-size: 0.6rem;
     color: white;
